--- a/source/templates/includes/arrowList.liquid
+++ b/source/templates/includes/arrowList.liquid
@@ -1,44 +1,47 @@
-<div class="sectionList section__end">
-	<p class="sectionList__title">
-		<!-- Why Choose Us? -->
-		{{itemGrafic.title}}
-	</p>
-	<ul class="sectionList__content">
-		<li class="sectionList__list">
-			<i class="fa fa-arrow-right list" aria-hidden="true"></i>
-			<p class="sectionList__txt">
-				Quisque at massa ipsum  
-			</p>
-		</li>
-		<li class="sectionList__list">
-			<i class="fa fa-arrow-right list" aria-hidden="true"></i>
-			<p class="sectionList__txt">
-				Maecenas a lorem augue, egestas  
-			</p>
-		</li>
-		<li class="sectionList__list">
-			<i class="fa fa-arrow-right list" aria-hidden="true"></i>
-			<p class="sectionList__txt">
-				Cras vitae felis at lacus eleifend
-			</p>
-		</li>
-		<li class="sectionList__list">
-			<i class="fa fa-arrow-right list" aria-hidden="true"></i>
-			<p class="sectionList__txt">
-				Etiam auctor diam pellentesque
-			</p>
-		</li>
-		<li class="sectionList__list">
-			<i class="fa fa-arrow-right list" aria-hidden="true"></i>
-			<p class="sectionList__txt">
-				Nulla ac massa at dolor 
-			</p>
-		</li>
-		<li class="sectionList__list">
-			<i class="fa fa-arrow-right list" aria-hidden="true"></i>
-			<p class="sectionList__txt">
-				Condimentum eleifend vitae vitae
-			</p>
-		</li>	
-	</ul>
-</div>
+<!-- <div class="container sectList bodyColor">
+ -->
+	<div class="sectionList section__end">
+		<p class="sectionList__title">
+				<!-- Why Choose Us? -->
+			{{itemList.title}}
+		</p>
+		<ul class="sectionList__content">
+			<li class="sectionList__list">
+				<i class="fa fa-arrow-right list" aria-hidden="true"></i>
+				<p class="sectionList__txt">
+					Quisque at massa ipsum  
+				</p>
+			</li>
+			<li class="sectionList__list">
+				<i class="fa fa-arrow-right list" aria-hidden="true"></i>
+				<p class="sectionList__txt">
+					Maecenas a lorem augue, egestas  
+				</p>
+			</li>
+			<li class="sectionList__list">
+				<i class="fa fa-arrow-right list" aria-hidden="true"></i>
+				<p class="sectionList__txt">
+					Cras vitae felis at lacus eleifend
+				</p>
+			</li>
+			<li class="sectionList__list">
+				<i class="fa fa-arrow-right list" aria-hidden="true"></i>
+				<p class="sectionList__txt">
+					Etiam auctor diam pellentesque
+				</p>
+			</li>
+			<li class="sectionList__list">
+				<i class="fa fa-arrow-right list" aria-hidden="true"></i>
+				<p class="sectionList__txt">
+					Nulla ac massa at dolor 
+				</p>
+			</li>
+			<li class="sectionList__list">
+				<i class="fa fa-arrow-right list" aria-hidden="true"></i>
+				<p class="sectionList__txt">
+					Condimentum eleifend vitae vitae
+				</p>
+			</li>
+		</ul>
+	</div>
+<!-- </div> -->
