--- a/source/templates/includes/widget.liquid
+++ b/source/templates/includes/widget.liquid
@@ -1,6 +1,7 @@
-<div class="widgets clearfix">
 
-	{% for eachPart in data[section].[widget] %}
+<div class="widgets clearfix">
+ 
+	{% for eachPart in data[section].widget %}
 
 		<div class="widget__total">
 			<div class="widget__singlePart">
