--- a/source/sass/modules/_base.sass
+++ b/source/sass/modules/_base.sass
@@ -93,6 +93,8 @@ $bord_azure: #20a8da
 .bodyColor
 	background-color: $background
 
+.sectList
+	padding-bottom: 40px
 .responsiveImg
 	display: block
 	width: 100%
@@ -100,11 +102,109 @@ $bord_azure: #20a8da
 
 .button 
 	padding: 9px 20px
+	background-color: $violet
+	display: inline-block
+	font-size: 14px
+	border-radius: 7px
+	box-shadow: 0px 4px 0px $bord_violet
+	font-weight: 300
+
+	&.active
+		background-color: $azure
+		box-shadow: 0px 4px 0px $bord_azure
 
 	@media screen and (min-width: 650px)
 		padding: 10px 22px
 	@media screen and (min-width: 1024px)
-		padding: 13px 32px
+		padding: 12px 40px
 
+.section__end
+	width: 100%
+	display: inline-block
+	vertical-align: top
 
+	@media screen and (min-width: 650px)
+		width: 30%
+		&.sectionTxt
+			width: 100%
+			margin: 0 auto
+			text-align: center
 
+	@media screen and (min-width: 1024px)
+		width: 20%
+		margin-left: 4%
+		
+		&.sectionTxt
+			width: 20%
+			margin-left: 4%
+
+		&:first-child
+			margin-left: 0%		
+
+.sectionList__title
+	color: $bold_gray
+	font-size: 16px
+	font-weight: 900
+	padding: 20px 0px
+
+	@media screen and (min-width: 650px)
+		padding: 35px 0px 20px
+
+	@media screen and (min-width: 1024px)
+	
+
+.sectionList__txt
+	font-size: 13px
+	color: $txt_gray
+	display: inline-block
+
+	@media screen and (min-width: 650px)
+		font-size: 11px
+
+	@media screen and (min-width: 1024px)
+		font-size: 13px		
+
+.aboutWidget
+	margin-top: -200px
+
+.widgets
+	padding-top: 50px
+	width: 100%
+
+.widget__total
+	display: inline-block
+	float: left
+	margin-left: 2.5%
+	font-size: 0px
+	vertical-align: bottom
+	width: 48%
+
+	&:nth-child(2n+1)
+		margin-left: 0%
+
+	&:first-child
+		margin-left: 0%
+
+	@media screen and (min-width: 650px)
+		width: 48%
+
+	@media screen and (min-width: 1024px)
+		width: 23%
+
+		
+		&:nth-child(2n+1)
+			margin-left: 2.5%
+		&:first-child 
+			margin-left: 0%
+
+.widget__button
+	text-align: center
+	position: relative
+	display: block
+	bottom: 20px
+
+	@media screen and (min-width: 650px)
+
+	@media screen and (min-width: 1024px)
+		// margin: -10% 0%
+		// left: 11.5%
