--- a/source/sass/modules/_index.sass
+++ b/source/sass/modules/_index.sass
@@ -136,7 +136,8 @@
 	@media screen and (min-width: 1024px)
 		line-height: 25px
 		font-size: 13px
-		line-height: 45px
+		line-height: 23px
+		padding-top: 10px
 
 .sectionGrey__button
 	background-color: $azure
