--- a/source/sass/style.sass
+++ b/source/sass/style.sass
@@ -13,5 +13,9 @@
 @import "modules/clients"
 @import "modules/aboutUs"
 @import "modules/features"
-@import "modules/txtPrePost"
+@import "modules/txtPre"
+@import "modules/txtPost"
 @import "modules/services"
+@import "modules/arrowList"
+@import "modules/cit"
+@import "modules/widgImg"
