--- a/source/templates/includes/header.liquid
+++ b/source/templates/includes/header.liquid
@@ -11,22 +11,22 @@
 			
 			<nav class="header__navbar clearfix" >
 				<li class="header__item" >
-					<a class="header__menu active" href="#" title="menu-voice">
+					<a class="header__menu active" href="#index" title="menu-voice">
 						home
 					</a>
 				</li>
 				<li class="header__item" >
-					<a class="header__menu" href="#" title="menu-voice">
+					<a class="header__menu" href="#about_us" title="menu-voice">
 						about
 					</a>
 				</li>
 				<li class="header__item" >
-					<a class="header__menu" href="#" title="menu-voice">
+					<a class="header__menu" href="#services" title="menu-voice">
 						services
 					</a>
 				</li>
 				<li class="header__item" >
-					<a class="header__menu" href="#" title="menu-voice">
+					<a class="header__menu" href="#portfolio" title="menu-voice">
 						<span class="header__link">
 							<i class="material-icons iconNav">keyboard_arrow_down</i>
 							portfolio
@@ -51,17 +51,17 @@
 					</ul>
 				</li>
 				<li class="header__item" >
-					<a class="header__menu" href="#" title="menu-voice">
+					<a class="header__menu" href="#blog" title="menu-voice">
 						blog
 					</a>
 				</li>
 				<li class="header__item" >
-					<a class="header__menu" href="#" title="menu-voice">
+					<a class="header__menu" href="#features" title="menu-voice">
 						features
 					</a>
 				</li>
 				<li class="header__item" >
-					<a class="header__menu" href="#" title="menu-voice">
+					<a class="header__menu" href="#contacts" title="menu-voice">
 						contacts
 					</a>
 				</li>
