--- a/source/templates/contact.liquid
+++ b/source/templates/contact.liquid
@@ -38,7 +38,7 @@
 						<label class="form__label" for="webSite">Web Site</label>
 					</div>
 					<textarea class="form__textarea" name="name" rows="8" cols="60"></textarea>
-				<button class="form__button" type="button" name="button">send</button>
+				<a class="form__button" href="#">send</a>
 				</form>
 			</div>
 
