--- a/source/sass/modules/_bloglisting.sass
+++ b/source/sass/modules/_bloglisting.sass
@@ -36,16 +36,21 @@
 	color: $violet
 	padding-top: 20px
 	font-weight: 800
+	position: relative
+	padding-left: 25px
+	line-height: 15px
 	@media screen and (min-width: 650px)
 		font-size: 12px
 
 	@media screen and (min-width: 1024px)
 		font-size: 14px
+		line-height: 18px
 
 .categories__arrow
 	color: $azure
 	font-size: 15px
-	margin-right: 15px
+	position: absolute
+	left: 0
 
 .recent
 	padding-top: 40px
@@ -59,17 +64,20 @@
 .recent__item
 	@extend .categories__item
 	font-size: 11px
+
 	@media screen and (min-width: 650px)
 		font-size: 11px
 
 	@media screen and (min-width: 1024px)
 		font-size: 13px
+		line-height: 18px
 
 .recent__arrow
 	color: $azure
 	font-size: 20px
-	margin-right: 15px
 	font-weight: 800
+	position: absolute
+	left: 0
 
 .tag
 	@extend .recent
