--- a/source/templates/includes/portfolio_post.liquid
+++ b/source/templates/includes/portfolio_post.liquid
@@ -19,7 +19,7 @@
 		</p>
 		<div class="right__bottompart">
 			<div class="porfoliopost__site">
-				<a class="porfoliopost__linksite">
+				<a href="" class="porfoliopost__linksite">
 					<i class="porfoliopost__icon fa fa-link" aria-hidden="true"></i>{{item.site}}</a>
 				</a>
 			</div>
