--- a/source/sass/modules/_base.sass
+++ b/source/sass/modules/_base.sass
@@ -171,6 +171,9 @@ $bord_azure: #20a8da
 	padding-top: 50px
 	width: 100%
 
+.widget__singlePart
+	background-color: #fff
+	
 .widget__total
 	display: inline-block
 	float: left
