--- a/source/sass/modules/_widgImg.sass
+++ b/source/sass/modules/_widgImg.sass
@@ -22,7 +22,6 @@
 	&.active
 		display: block
 
-
 .widget__descript
 	font-size: 13px
 	color: #fff
@@ -33,7 +32,7 @@
 	padding-top: 34px
 
 
-.widget__itemService
+.widget__itemAbout
 	display: inline-block
 	background-color: #209EDA
 	width: 20%
