--- a/source/sass/modules/_widget.sass
+++ b/source/sass/modules/_widget.sass
@@ -35,13 +35,21 @@
 	text-align: center
 	margin: 18px
 	min-height: 50px
+	padding-bottom: 56px
+	padding-top: 40px
+	margin: 0 auto
 
 	@media screen and (min-width: 650px)
 		margin: 18px
+		padding-bottom: 65px
+		padding-top: 30px
+		width: 80%
+		margin: 0 auto
 	@media screen and (min-width: 1024px)
 		margin: 0px
 		padding-bottom: 80px
 		padding-top: 40px
+		margin: 0 auto
 
 .widget__icon
 	font-size: 33px
@@ -89,12 +97,12 @@
 	text-align: center
 	position: relative
 	display: block
-	bottom: 20px
+	bottom: 36px
 
 	@media screen and (min-width: 650px)
-		// left: 25.5%
-		// margin-top: -50px
+		bottom: 20px
 
 	@media screen and (min-width: 1024px)
+		bottom: 20px
 		// margin: -10% 0%
 		// left: 11.5%
