--- a/source/templates/includes/header.liquid
+++ b/source/templates/includes/header.liquid
@@ -11,7 +11,7 @@
 			
 			<nav class="header__navbar clearfix" >
 				<li class="header__item" >
-					<a class="header__menu active" href="#index" title="menu-voice">
+					<a class="header__menu j-header__menu active" href="#index" title="menu-voice">
 						home
 					</a>
 				</li>
