--- a/source/templates/includes/navigation.liquid
+++ b/source/templates/includes/navigation.liquid
@@ -16,6 +16,12 @@
 					<li  class="breadcrumb__item">
 						{{data[section].breadcrumbs[1]}}
 					</li>
+					<li  class="breadcrumb__item">
+						/
+					</li>
+					<li  class="breadcrumb__item">
+						{{data[section].breadcrumbs[2]}}
+					</li>
 				</ul>
 		</div>
 	</div>
