--- a/source/sass/modules/_services.sass
+++ b/source/sass/modules/_services.sass
@@ -1,4 +1,34 @@
 
 .widget__serviceTxt
 	font-size: 14px
+	line-height: 40px
+	border-bottom: 1px solid $grey
+	color: $txt_gray
+	text-align: center
 	
+	&.active
+		color: #fff
+
+.serviceBtn
+	background-color: $bold_gray
+	box-shadow: 0px 0px 0px 
+	border-radius: 4px
+	font-size: 16px
+	padding: 15px 40px
+	&.btnTop
+		font-size: 14px
+
+	&.active
+		background-color: $violet
+		box-shadow: 0px 0px 0px
+
+.widget__contentServ
+	width: 77%
+	margin: 0 auto
+	padding: 50px 0px
+
+.widget__singlePart
+	border-radius: 7px
+	&.active
+		background-color: $azure
+		box-shadow: 0px 5px 0px $bord_azure
