--- a/source/sass/modules/_widgImg.sass
+++ b/source/sass/modules/_widgImg.sass
@@ -1,11 +1,12 @@
 .widget__singleBox
 	min-height: 50px
-	background-color: $azure
 	border-radius: 7px
-	box-shadow: 0px 5px 0px $bord_azure
+	box-shadow: 0px 3px 0px $bold_gray
+	border: 2px solid $bold_gray
 
 	&.active
-		background-color: $violet
+		background-color: $azure
+		box-shadow: 0px 5px 0px $bord_azure
 
 .widget__contentImg
 	display: block
@@ -15,7 +16,7 @@
 
 .widget__contentHiden
 	display: none
-	width: 80%
+	width: 77%
 	margin: 0 auto
 	padding-bottom: 35px
 
