--- a/source/sass/modules/_index.sass
+++ b/source/sass/modules/_index.sass
@@ -1,5 +1,10 @@
 .slider
 	position: relative
+	padding-top: 0px
+	@media screen and (min-width: 650px)
+		padding-top: 110px
+	@media screen and (min-width: 1024px)
+		padding-top: 0px
 
 .slider__container
 	position: relative
