--- a/source/sass/modules/_widgImg.sass
+++ b/source/sass/modules/_widgImg.sass
@@ -1,12 +1,14 @@
 .widget__singleBox
+	overflow: hidden
+	position: relative
 	min-height: 50px
 	border-radius: 7px
 	box-shadow: 0px 3px 0px $bold_gray
 	border: 2px solid $bold_gray
 
 	&.active
-		background-color: $azure
-		box-shadow: 0px 5px 0px $bord_azure
+		border: 2px solid $violet
+		box-shadow: 0px 5px 0px $bord_violet
 
 .widget__contentImg
 	display: block
@@ -15,13 +17,25 @@
 		display: none
 
 .widget__contentHiden
-	display: none
-	width: 77%
+	display: block
+	position: absolute
+	top: 100%
+	left: 0%
+	height: 100%
+	width: 100%
 	margin: 0 auto
 	padding-bottom: 35px
+	transition: all 400ms ease
+	background-color: $violet
 
 	&.active
 		display: block
+		top: 0%
+		transition: all 400ms ease
+
+.widget__contenuto
+	width: 80%
+	margin: 0 auto
 
 .widget__descript
 	font-size: 13px
@@ -32,10 +46,9 @@
 	padding-bottom: 60px	
 	padding-top: 34px
 
-
 .widget__itemAbout
 	display: inline-block
-	background-color: #209EDA
+	background-color: $dark_violet
 	width: 20%
 	margin-left: 5%
 	font-size: 25px
@@ -46,6 +59,9 @@
 	&:first-child
 		margin-left: 0%
 
-	
+.imgBtn
+	&.active
+		background-color: $azure
+		box-shadow: 0px 4px 0px $bord_azure
 
 
