--- a/source/sass/modules/_widget.sass
+++ b/source/sass/modules/_widget.sass
@@ -93,16 +93,16 @@
 		line-height: 23px
 		font-size: 14px
 
-.widget__button
-	text-align: center
-	position: relative
-	display: block
-	bottom: 36px
+// .widget__button
+// 	text-align: center
+// 	position: relative
+// 	display: block
+// 	bottom: 36px
 
-	@media screen and (min-width: 650px)
-		bottom: 20px
+// 	@media screen and (min-width: 650px)
+// 		bottom: 20px
 
-	@media screen and (min-width: 1024px)
-		bottom: 20px
-		// margin: -10% 0%
-		// left: 11.5%
+// 	@media screen and (min-width: 1024px)
+// 		bottom: 20px
+// 		// margin: -10% 0%
+// 		// left: 11.5%
