--- a/source/sass/modules/_base.sass
+++ b/source/sass/modules/_base.sass
@@ -1,4 +1,4 @@
-//http://meyerweb.com/eric/tools/css/reset/
+v//http://meyerweb.com/eric/tools/css/reset/
 //   v2.0 | 20110126
 //   License: none (public domain)
 
@@ -110,7 +110,7 @@ $bord_azure: #20a8da
 	font-weight: 300
 	width: 50%
 
-	&.active
+	.active &
 		background-color: $azure
 		box-shadow: 0px 4px 0px $bord_azure
 
