--- a/source/templates/includes/sectionGrey.liquid
+++ b/source/templates/includes/sectionGrey.liquid
@@ -8,7 +8,7 @@
 			{{data[section].sectiongrey.paragrafo}}
 		</p>
 	</div>
-	<div class="sectionGrey__button">
+	<div class="sectionGrey__button widget__button">
 		<a class="button" href="#">
 			view more
 		</a>
