--- a/source/sass/modules/_header.sass
+++ b/source/sass/modules/_header.sass
@@ -16,7 +16,7 @@
 			right: 0%
 
 .menuMobile
-	overflow-x: hidden
+	overflow: hidden
 
 .header
 	background-color: $violet
@@ -101,7 +101,7 @@ li
 		display: block
 		background-color: $dark_violet
 		position: fixed
-		width: 40%
+		width: 50%
 		height: 100%
 		right: 0%
 		top: 61px
@@ -130,7 +130,6 @@ li
 
 		&:hover
 			background-color: $azure
-			box-shadow: 0px 4px 0px $bord_azure
 			border: 7px
 
 		@media screen and (min-width: 1024px)
@@ -155,7 +154,8 @@ li
 	border-radius: 8px
 
 	.menuMobile &
-		&.active 
+		display: block
+		.active &
 			font-size: 14px
 			box-shadow: 0px 0px 0px 
 		&:hover
@@ -192,59 +192,45 @@ li
 			box-shadow: 0px 4px 0px $bord_violet
 
 .header__link
-	display: none
+	display: inline-block
 	@media screen and (min-width: 650px)
 		display: inline-block
 	@media screen and (min-width: 1024px)
 		display: inline-block
 .iconNav
 	vertical-align: middle
-.header__linkMob
-	display: block
-
-	@media screen and (min-width: 650px)
-		display: none
-	@media screen and (min-width: 1024px)
-		display: none
-.iconMob
-	vertical-align: middle
 
 .header__subContent
 	display: none
 	position: absolute
-	background-color: $bord_azure
-
-	.menuMobile &
-		right: 140px
-		top: 177px
-		z-index: 999999
-		width: 90%
-		margin: 0 auto
-		text-align: center
+	background-color: $dark_violet
 
 	@media screen and (min-width: 650px)
 		top: 80px
+		right: 140px
 	@media screen and (min-width: 1024px)
 		top: 55px
+		right: 140px
 
-.header__subMenu
-	// display: none
-	// &.active
-	// 	display: block
-	// 	position: fixed
-	// 	top: 10px
-	// 	background-color: $bord_azure
-	// 	height: 40%
-	// 	width: 30%
-	// 	border: 2px solid red
+	.menuMobile &
+		margin: 0 auto
+		text-align: center
+		position: relative
+
+	
+
+.header__voice
+	&.active 
+		background-color: $azure
+		box-shadow: 0px 4px 0px $bord_azure		
+	&:hover
+		background-color: $violet
 
 .header__subVoice
 	line-height: 28px
 	font-size: 14px
-	background-color: $azure
 	margin: 5px 
-	padding: 3px 12px
-	font: normal normal normal 14px/1 FontAwesome
+	width: 90%
 
 	@media screen and (min-width: 650px)
 
