--- a/source/sass/modules/_sectionGrey.sass
+++ b/source/sass/modules/_sectionGrey.sass
@@ -38,15 +38,13 @@
 
 .sectionGrey__button
 	display: inline-block
-	font-size: 14px
 	text-transform: uppercase
-	text-align: right
 	border-radius: 7px
 	font-weight: 300
 	vertical-align: middle
 	margin: 0 auto
-	width: 33%
-
+	position: none
+	
 	@media screen and (min-width: 650px)
 		font-size: 16px
 		font-weight: 400
