--- a/source/sass/modules/_widget.sass
+++ b/source/sass/modules/_widget.sass
@@ -9,6 +9,7 @@
 	font-size: 0px
 	vertical-align: bottom
 	width: 48%
+	min-height: 100px
 
 	&:nth-child(2n+1)
 		margin-left: 0%
@@ -28,13 +29,18 @@
 		&:first-child 
 			margin-left: 0%
 
-.widget__singlePart
+.widget__singlePart.widgHome
 	background-color: #fff
+	min-height: 350px
+	.active &
+		background-color: #fff
+		box-shadow: 0px 5px 0px $grey
+
 
 .widget__container
 	text-align: center
 	margin: 18px
-	min-height: 50px
+	
 	padding-bottom: 56px
 	padding-top: 40px
 	margin: 0 auto
@@ -61,7 +67,7 @@
 
 .widgIcon
 	color: $violet
-	&.active
+	.active &
 		color: $azure
 
 .widget__txtBold
@@ -93,16 +99,3 @@
 		line-height: 23px
 		font-size: 14px
 
-// .widget__button
-// 	text-align: center
-// 	position: relative
-// 	display: block
-// 	bottom: 36px
-
-// 	@media screen and (min-width: 650px)
-// 		bottom: 20px
-
-// 	@media screen and (min-width: 1024px)
-// 		bottom: 20px
-// 		// margin: -10% 0%
-// 		// left: 11.5%
