--- a/source/templates/includes/widget.liquid
+++ b/source/templates/includes/widget.liquid
@@ -3,8 +3,8 @@
  
 	{% for eachPart in data[section].widget %}
 
-		<div class="widget__total">
-			<div class="widget__singlePart">
+		<div class="widget__total j-widgetCover">
+			<div class="widget__singlePart widgHome">
 				<div class="widget__container">
 					<a class="widget__icon" href="#">
 						{{eachPart.iconWidg}}
@@ -17,7 +17,7 @@
 					</p>
 				</div>
 			</div>
-			<div class="widget__button ">
+			<div class="widget__button j-btnCover">
 				<a class="button" href="#">
 					{{eachPart.buttonWidg}}
 				</a>
