--- a/source/sass/modules/_contenText.sass
+++ b/source/sass/modules/_contenText.sass
@@ -57,7 +57,6 @@
 .contenText__paragraph
 	font-size: $fontSize-m
 	color: $dark-gray
-	line-height: 26px
 	//width: 90%
 	margin: 0 auto
 	text-align: justify
@@ -69,15 +68,12 @@
 		width: 80%
 		text-align: center
 	
-	+breakpoint (l)
-		font-size: 20px
-		width: 70%
-		line-height: $spaceLett
+	
 		text-align: center
 	
 	+breakpoint (xl)
 		font-size: 20px
 		width: 70%
-		line-height: $spaceLett
+		line-height: $space-xl
 		text-align: center
 	
