--- a/source/sass/modules/_iconfonts.sass
+++ b/source/sass/modules/_iconfonts.sass
@@ -45,11 +45,22 @@
 
 .icon-Logo_DD:before 
   content: "\e902"
-  font-size: 42px
+  font-size: 30px
+
+  +breakpoint (m)
+    font-size: 30px
+  +breakpoint (l)
+    font-size: 42px
+  +breakpoint (xl)
+    font-size: 42px
 
 .icon-hamIcon:before 
   content: "\e903"
-  font-size: 18px
+  font-size: 16px
+
+  +breakpoint (m)
+    font-size: 18px
+  
 
 
 .icon-menu__close:before 
