--- a/source/templates/includes/footer.liquid
+++ b/source/templates/includes/footer.liquid
@@ -32,8 +32,8 @@
 
 			<div class="company">
 				<li class="info__icon">
-					<!-- <img class="imgLogo" src="img/sgs.png" alt="logo SGS"> -->
-					<span class="icon-sgs imgLogo"></span>
+					<img class="imgLogo" src="img/sgs.png" alt="logo SGS">
+					<!-- <span class="icon-sgs imgLogo"></span> -->
 				</li>
 				<li class="info__List">
 					<p class="info__company"> Société Générale de Surveillance</p>	
