--- a/source/sass/modules/_footer.sass
+++ b/source/sass/modules/_footer.sass
@@ -200,7 +200,17 @@
 	+breakpoint (m)
 
 	+breakpoint (l)
-		
+	
+
+.imgLogo	
+	display: inline-block
+	width: 46px
+
+	+breakpoint (m)
+
+	+breakpoint (l)
+
+	+breakpoint (xl)
 			
 // .scroll.active 
 // 	visibility: visible
