--- a/source/sass/modules/_header.sass
+++ b/source/sass/modules/_header.sass
@@ -48,6 +48,9 @@
 	padding-top: 16px
 	padding-bottom: 16px
 
+	span 
+		display: inline-block
+
 	+breakpoint (m)
 		display: inline-block
 		margin: 0 auto
@@ -72,11 +75,25 @@
 .header__navbar
 	position: fixed
 	display: none
-	left: 0
-	top: 74px
+	left: -260px
+	top: 62px
 	padding-top: 0px
 	padding-bottom: 0px
 	float: none
+	width: 230px
+	transition: left 0.3s ease
+	overflow: hidden
+	
+
+	&.menu_mobile
+		display: block
+		z-index: 99
+		height: 740px
+		padding-top: 40px
+		overflow: auto
+		left: 0
+		background-color: $cerulean
+		transition: width .3s ease
 
 	+breakpoint (m)
 		display: block
@@ -85,31 +102,26 @@
 		position: relative
 		display: inline-block
 		float: right
+		top: 0px
+		width: auto
 
 	+breakpoint (xl)
 		position: relative
 		display: inline-block
 		float: right
+		top: 0px
+		width: auto
 
-	&.menu_mobile
-		display: block
-		background-color: $cerulean
-		z-index: 99
-		width: 40%
-		height: 740px
-		padding-top: 16px
-
-
-
+	
 .header__menu 
 	list-style: none
 	display: block
-	margin-top: 26px
+	//margin-top: 24px
 	text-align: left
 
 	+breakpoint (m)
 		display: block
-		margin-top: 26px
+		margin-top: 24px
 		text-align: left
 
 	+breakpoint (l)
@@ -123,12 +135,14 @@
 
 
 .header__voice
-	padding: 20px 16px
+	padding: 0px 16px
 	color: #fff
-	font-size: $fontSize-xl
+	font-size: $fontSize-s
 	letter-spacing: 2px
 	display: block
 	position: relative
+	height: 50px
+	vertical-align: middle
 	//font-weight: lighter
 	+font-book
 
@@ -139,10 +153,12 @@
 	+breakpoint (l)
 		font-size: $fontSize-m
 		padding: 10px 20px
+		height: auto
 
 	+breakpoint (xl)
 		padding: 10px 25px
 		font-size: $fontSize-m
+		height: auto
 
 	&.active:after
 		content: " "
@@ -209,14 +225,16 @@
 
 .header__icon-menu
 	position: relative
-	left: 24px
-	top: 22px
+	left: 12px
+	top: 14px
 	display: inline-block
 	text-align: left
 	float: left
 
 	+breakpoint (m)
 		display: inline-block
+		top: 18px
+		left: 18px
 			
 	+breakpoint (l)
 		display: none
@@ -226,8 +244,8 @@
 
 
 .hamIcon
-	width: 36px
-	height: 36px
+	width: 34px
+	height: 34px
 	border: 2px solid white
 	font-weight: 400
 	font-size: 10px
@@ -262,6 +280,24 @@
 		&:before 
 			content: "\e905"
 
+.navigation__curtain 
+	visibility: hidden
+	opacity: 0
+	background: #555
+	background: rgba(255, 255, 255, .7)
+	position: absolute
+	z-index: 99998
+	left: 0
+	top: 0
+	right: 0
+	bottom: 0
+	transition: opacity .3s ease, visibility 0s .3s ease
+
+
+	.blockCont.active + & 
+		transition: opacity .3s ease
+		visibility: visible
+		opacity: 1
 
 
 //.header__icon
