--- a/source/templates/includes/header.liquid
+++ b/source/templates/includes/header.liquid
@@ -20,36 +20,37 @@
 				<nav class="header__navbar j-voiceMenu">
 					<li class="header__menu">
 						<a class="header__voice j-header__voice " href="index.html">
-								Home
+							<span> Home </span>
  						</a>
 					</li>
 					<li class="header__menu">
 						<a class="header__voice j-header__voice " href="angebot.html">
-								Angebot 
+							<span> Angebot </span>
  						</a>
 					</li>
 					<li class="header__menu">
 						<a class="header__voice j-header__voice" href="referenzen.html">
 							<!-- <p class="voiceHover"> --> 
-								Referenzen
+							<span>	Referenzen </span>
 							<!-- </p>
  -->					</a>
 					</li>
 					<li class="header__menu">
 						<a class="header__voice j-header__voice" href="uberUns.html">
 							<!-- <p class="voiceHover"> --> 
-								Über Uns
+								<span> Über Uns </span>
 							<!-- </p>
  -->						</a>
 					</li>
 					<li class="header__menu">
 						<a class="header__voice j-header__voice" href="kontakt.html">
 							<!-- <p class="voiceHover"> --> 
-								Kontakt
+								<span> Kontakt </span>
 							<!-- </p>
  -->						</a>
 					</li>
 				</nav>
+				<div class="navigation__curtain"></div>
 
 			</div>
 		</div>
